<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:background="@drawable/shape_dialog_bg_corner_white">

    <TextView
        android:id="@+id/tvTitleTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:gravity="start"
        android:includeFontPadding="false"
        android:text="@string/tips"
        android:textColor="#333333"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="30dp"
        android:gravity="start"
        android:includeFontPadding="false"
        android:lineSpacingExtra="3dp"
        android:minLines="2"
        android:textColor="#333333"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTips" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:background="#F2F2F2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/ok"
        android:textColor="@color/text_color_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine1" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/btn_cancel"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvConfirm"
        app:layout_constraintRight_toLeftOf="@id/tvConfirm"
        app:layout_constraintTop_toTopOf="@id/tvConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>