<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/common_find_new_version"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contentTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <TextView
        android:id="@+id/downloadStateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:text="下载中.."
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTv" />

    <ProgressBar
        android:id="@+id/downloadPb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_20"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadStateTv" />

    <Button
        android:id="@+id/cancelTv"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/selector_border_407ffe_withenable"
        android:text="@string/btn_cancel"
        android:textColor="#407ffe"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadPb"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/selector_border_407ffe"
        android:text="@string/common_download"
        android:textColor="#407ffe"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/cancelTv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadPb" />

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/dp_1"
        android:layout_height="0dp"
        android:background="@color/color_3e7efe"
        app:layout_constraintBottom_toBottomOf="@id/cancelTv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancelTv" />
</androidx.constraintlayout.widget.ConstraintLayout>